--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,12 +3,12 @@ import { Image } from "astro:assets";
 ---
 
 <header class="flex flex-row justify-between items-center py-3 w-[960px] mx-auto">
-    <Image class="rounded-full h-20 w-20 object-cover object-top" width="50" height="50" src="/DorianPhoto.JPEG" alt="Dorian" />
+    <Image loading='eager' class="rounded-full h-20 w-20 object-cover object-top" width="50" height="50" src="/dorian.JPEG" alt="Dorian" />
 
     <nav class="flex flex-row gap-x-10 opacity-85">
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Projects</a>
-        <a href="">Contact</a>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Projects</a>
+        <a href="#">Contact</a>
     </nav>
 </header>
