--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,11 @@ import Badge from '../components/Badge.astro';
 
 <Layout title="Welcome to Astro.">
 	<main>
-	  <section class="w-full lg:w-[740px] mx-auto py-32 flex flex-col items-start">
+	  <section class="w-full lg:w-[740px] mx-auto py-10 flex flex-col items-start">
 	    <h1 class="text-white text-5xl font-bold justify-center flex flex-row gap-x-5 pb-7">
-			Hey, soy Dorian <a href="https://linkedin.com/in/dorians-developer" target="_blank" rel="noopener" class="flex flex-row items-center"><Badge>Disponible para trabajar</Badge></a></h1>
-		<h2 class="text-xl opacity-80">+2 años de experiencia. Desarrollador Web Full Stack y Deportista. Vivo en Madrid, España 🇪🇸
+			Hey, soy Dorian <a href="https://linkedin.com/in/dorians-developer" target="_blank" rel="noopener" class="flex flex-row items-center">
+				<Badge>Disponible para Trabajar</Badge></a></h1>
+		<h2 class="text-xl text-white opacity-80">+2 años de experiencia. Desarrollador Web Full Stack y Deportista. Vivo en Madrid, España 🇪🇸
 			 y nacido en Rumanía 🇷🇴.
 			Especializado en crear aplicaciones web.
 		</h2>
