--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,9 @@
 ---
 import Header from '../components/Header.astro';
 import "@fontsource-variable/onest"
+import InProcess from '../components/InProcess.astro';
+import Projects from '../components/Projects.astro'
+import Footer from '../components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -10,7 +13,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
@@ -22,11 +25,16 @@ const { title } = Astro.props;
 	<body>
 		<Header />
 		<slot />
+		<div class="flex flex-col justify-center">
+			<InProcess />
+			<Projects />
+		</div>
+		<Footer>Contactame por &nbsp; <a href="http://linkedin.com/in/dorians-developer" target="_blank" rel="noopener noreferrer"> Linkedin</a></Footer>
 	</body>
 </html>
 <style is:global>
 	:root {
-		color-scheme: light dark;
+		color-scheme: dark light;
 	}
 
 	html {
