--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ interface Props {
 	title: string;
 }
 
-const { title } = Astro.props;
+
 ---
 
 <!doctype html>
@@ -20,7 +20,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>Dorian Portfolio</title>
 	</head>
 	<body>
 		<Header />
