--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,5 @@
-<footer class='w-full text-center bg-red-400 flex items-center justify-center text-white fixed bottom-0'>
-    <slot />
+<footer
+  class="w-[100%] text-center flex items-center justify-center text-white fixed bottom-0 backdrop-blur h-8"
+>
+  <slot />
 </footer>
