--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,50 +1,65 @@
 ---
-import Header from '../components/Header.astro';
-import "@fontsource-variable/onest"
-import InProcess from '../components/InProcess.astro';
-import Projects from '../components/Projects.astro'
-import Footer from '../components/Footer.astro';
+import Header from "../components/Header.astro";
+import "@fontsource-variable/onest";
+import InProcess from "../components/InProcess.astro";
+import Projects from "../components/Projects.astro";
+import Footer from "../components/Footer.astro";
 
 interface Props {
-	title: string;
+  title: string;
 }
-
-
 ---
 
 <!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Dorian Portfolio</title>
-	</head>
-	<body>
-		<Header />
-		<slot />
-		<div class="flex flex-col justify-center">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Dorian Portfolio</title>
+  </head>
+  <body
+    class="inset-0 dark flex h-full w-full items-center px-5 py-10 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"
+  >
+    <Header />
+    <slot />
+    <!-- <div class="flex flex-col justify-center">
 			<InProcess />
 			<Projects />
-		</div>
-		<Footer>Contactame por &nbsp; <a href="http://linkedin.com/in/dorians-developer" target="_blank" rel="noopener noreferrer"> Linkedin</a></Footer>
-	</body>
+		</div> -->
+    <Footer
+      >Contactame por &nbsp; <a
+        href="http://linkedin.com/in/dorians-developer"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Linkedin</a
+      ></Footer
+    >
+  </body>
 </html>
 <style is:global>
-	:root {
-		color-scheme: dark light;
-	}
+  :root {
+    color-scheme: light dark;
+  }
 
-	html {
-		font-family: "Onest Variable" , system-ui, sans-serif;
-	}
-	
-	body {
-		display: flex;
-		flex-direction: column;
-		background-color: #050505;
-		height: 100vh;
-	}
+  html {
+    font-family: "Onest Variable", system-ui, sans-serif;
+    scroll-behavior: smooth;
+  }
+
+  body {
+    display: flex;
+    flex-direction: column;
+    background-color: #050505;
+    /* width: 100vw; */
+    height: 100vh;
+  }
+  @media (prefers-reduced-motion: reduce) {
+    html {
+      scrollbar-width: auto;
+    }
+  }
 </style>
