--- a/src/components/InProcess.astro
+++ b/src/components/InProcess.astro
@@ -1,1 +1,3 @@
-<h4 class="flex justify-center text-xl text-rose-400">Estoy desarrollando lo más rápido y mejor posible, gracias por tu paciencia :)</h4>
+<h4 class="flex justify-center text-xl text-rose-400">
+  Estoy desarrollando lo más rápido y mejor posible, gracias por tu paciencia :)
+</h4>
