--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -7,12 +7,13 @@ import Contact from "./Contact.astro";
 <section class="mx-auto py-10 flex flex-col items-start gap-10">
   <div class="flex flex-row gap-5">
     <Image
+      id="dorian"
       loading="eager"
       src="/dorian.JPEG"
-      height="70"
-      width="70"
+      height="120"
+      width="120"
       alt="Dorian"
-      class="rounded-full h-[120px] w-[120px] object-cover object-top opacity-90"
+      class="rounded-full object-cover object-top opacity-90 w-[120px] h-[120px]"
     />
     <div class="flex flex-col gap-7 items-start">
       <h1
