--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -11,7 +11,7 @@ const { title, description, link, image } = Astro.props;
         class="rounded-3xl
        object-cover object-centeral
        w-full
-       md:w-[50vw] h-auto transition-transform duration-500 ease-in-out transform group-hover:scale-110 group-hover:shadow-inner"
+       md:w-[50vw] h-auto transition-transform duration-500 ease-in-out transform group-hover:scale-110 group-hover:shadow-inner group-hover:shadow-2xl"
         src={image}
         alt={title}
       />
