--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,12 @@
+---
+import Toggle from "./Toggle.astro";
+---
+
 <header class="w-auto flex justify-center items-center py-4 z-50 sticky top-0">
   <nav
     id="navHeader"
-    class="flex items-center justify-between flex-row gap-x-4 text-gray-300 font-medium px-4 py-3 rounded-full transition-colors duration-3000 ease-in-out bg-transparent"
+    class="flex items-center justify-between flex-row gap-x-4 text-gray-300 text-2xl px-4 py-3 rounded-full duration-[300ms]
+     transition-all gap-10 border border-transparent"
   >
     <a
       class="md:flex-none hover:text-purple-500 hover:ease-in-out duration-300"
@@ -20,16 +25,27 @@
       href="#contact">Contacto</a
     >
   </nav>
+  <Toggle />
 </header>
 <script defer>
   document.addEventListener("scroll", () => {
     const nav = document.getElementById("navHeader");
-
-    if (window.scrollY > 0) {
-      nav.classList.add("bg-white");
+    if (window.scrollY > 20) {
+      nav.classList.remove("border-transparent");
+      nav.classList.add(
+        "bg-neutral-900",
+        // "text-white",
+        "font-semibold",
+        "border-neutral-700"
+      );
       console.log("scrolling");
     } else {
-      nav.classList.remove("bg-white");
+      nav.classList.add("border-transparent");
+      nav.classList.remove(
+        "bg-neutral-900",
+        "font-semibold",
+        "border-neutral-700"
+      );
       console.log("not scrolling");
     }
   });
